--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,18 @@
-canvas{
-    background-color: red;
-    width: 100%;
-    height: 300px;
-    margin-top: 100px;
+*{
+    box-sizing: border-box;
+}
 
+body, html{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+}
+
+canvas{
+    background-color: grey;
 }
