--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,10 +11,19 @@ body, html{
 .container{
     width: 100%;
     height: 100%;
+    background-color: #d3d3d3;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 canvas{
     background-color: grey;
+    border-radius: 20px;
+    -webkit-box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
+    -moz-box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
+    box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
 }
 
 .infoContainer{
