--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,6 @@ body, html{
     width: 100%;
     height: 100%;
     background-color: #d3d3d3;
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,6 +23,9 @@ canvas{
     -webkit-box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
     -moz-box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
     box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
+
+    max-width: 100%;
+    max-height: auto;
 }
 
 .infoContainer{
