--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,40 +1,87 @@
-*{
-    box-sizing: border-box;
-}
+/* COMMON STYLING */
+    @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
-body, html{
-    margin: 0;
-    width: 100%;
-    height: 100%;
-}
+    *{
+        box-sizing: border-box;
+    }
 
-.container{
-    width: 100%;
-    height: 100%;
-    background-color: #d3d3d3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    body, html{
+        margin: 0;
+        width: 100%;
+        height: 100%;
+        font-size: 16px;
+        font-family: 'Roboto', sans-serif;
+    }
 
-canvas{
-    background-color: grey;
-    border-radius: 20px;
-    -webkit-box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
-    -moz-box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
-    box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
+    .container{
+        width: 100%;
+        height: 100%;
+        background-color: #d3d3d3;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+/* END COMMON STYLING */
 
-    max-width: 100%;
-    max-height: auto;
-}
+/* INDEX HTML STYLING */
+    button{
+        padding: 25px 80px;
+        background: indianred;
+        color: white;
+        box-shadow: 0 10px firebrick;
+        border-radius: 20px;
+        border: none;
+        cursor: pointer;
+        font-size: 1.2rem;
+        font-weight: 800;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        transition: all 0.2s;
+    }
 
-.infoContainer{
-    position: absolute;
-    top: 10px;
-    left: 10px;
-}
+    button:hover{
+        box-shadow: 0 7px firebrick;
+    }
+/* END INDEX HTML */
 
-.infoContainer h2{
-    margin: 0;
-    padding: 0;
-}
+/* GAME HTML STYLING */
+    canvas{
+        background-color: grey;
+        border-radius: 20px;
+        -webkit-box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
+        -moz-box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
+        box-shadow: inset 0px 0px 80px 20px rgba(0,0,0,0.2);
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .infoContainer{
+        margin: 0;
+        padding: 0;
+        font-size: 1.2rem;
+    }
+
+    .playerOneInfo{
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
+
+    .playerTwoInfo{
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    .scoreContainer{
+        position: absolute;
+        top: 20px;
+        transform: translateX(-50%);
+        font-size: 2rem;
+    }
+
+    .scoreContainer span{
+        padding: 10px;
+    }
+/* END GAME HTML */
